fix: hide scrollbars in network settings on connection lost page

--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,14 @@ body {
   display: none;
 }
 
+.scrollbar-hide {
+  scrollbar-width: none;
+}
+
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+
 .fade-out {
   opacity: 0;
 }
